# genlogs-platform

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  add_wif_binding.sh  c4-architecture.md  c4-interactive.html  deploy-to-gcp-plan.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  README_DB.md  alembic.ini  placeid_mappings.csv  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: db.py  main.py  metrics.py
backend/app/api/routes/: cities.py  health.py  search.py
backend/app/config/: settings.py
backend/app/models/: db_models.py
backend/app/providers/db/: db.py
backend/app/providers/maps/: __init__.py  google.py  mock.py
backend/app/services/: city_service.py  search_service.py
backend/genlogs_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: entrypoint.sh  map_place_ids.py  run_e2e_local.sh  run_migrations_local.sh  seed_data.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 0001_initial.py
backend/src/app/: logging_config.py  main.py  metrics.py  telemetry.py
backend/src/app/config/: settings.py
backend/src/app/providers/: __init__.py  logging_provider.py
backend/src/app/services/: city_service.py  (+1 more)
backend/src/genlogs_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_search_validation.py
backend/tests/functional_e2e/: test_e2e_search.py
backend/tests/unit/: test_city_service_google.py  test_db_provider.py  test_google_provider_behavior.py  test_google_provider_edge_cases.py  test_maps_providers.py  test_search_provider_fallback.py
(+86 files in other folders)
