[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genlogs-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.2.0",
    "tenacity>=8.3.0",
    "pybreaker>=1.2.0",
    "slowapi>=0.1.9",
    "cachetools>=5.3.0",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "prometheus-client>=0.25.0",
    "httpx>=0.28.1",
    "alembic>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "pylint>=3.2.0",
]

[tool.pylint.main]
py-version = "3.12"
recursive = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-attributes = 8

[tool.pylint."messages control"]
disable = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
